--- a/index.html
+++ b/index.html
@@ -215,9 +215,34 @@
         </div>
     </section>
 
-    <footer class="py-20 bg-white border-t border-stone-100 text-center">
-        <div class="text-[10px] tracking-[0.6em] text-stone-300 font-bold uppercase">Kilole Hotel & Residences</div>
-    </footer>
+   <footer class="bg-white py-24 border-t border-stone-100">
+    <div class="max-w-7xl mx-auto px-10 flex flex-col items-center space-y-12">
+        
+        <img src="img/logo.JPG" class="h-10 opacity-60 grayscale hover:grayscale-0 transition-all duration-700">
+
+        <div class="flex items-center gap-10">
+            <a href="https://facebook.com" target="_blank" class="text-stone-400 hover:text-gold transition-all duration-300 transform hover:-translate-y-1">
+                <i data-lucide="facebook" class="w-5 h-5"></i>
+            </a>
+            <a href="https://instagram.com" target="_blank" class="text-stone-400 hover:text-gold transition-all duration-300 transform hover:-translate-y-1">
+                <i data-lucide="instagram" class="w-5 h-5"></i>
+            </a>
+            <a href="https://t.me/yourusername" target="_blank" class="text-stone-400 hover:text-gold transition-all duration-300 transform hover:-translate-y-1">
+                <i data-lucide="send" class="w-5 h-5"></i> </a>
+        </div>
+
+        <div class="flex flex-wrap justify-center gap-8 text-[9px] uppercase tracking-[0.3em] font-bold text-stone-400">
+            <a href="#about" class="hover:text-dark">Gardens</a>
+            <a href="#rooms" class="hover:text-dark">Residences</a>
+            <a href="#conference" class="hover:text-dark">Events</a>
+            <a href="#contact" class="hover:text-dark">Booking</a>
+        </div>
+
+        <p class="text-[9px] text-stone-300 tracking-[0.5em] uppercase">
+            &copy; 2026 Kilole Hotel & Residences. All Rights Reserved.
+        </p>
+    </div>
+</footer>
 
     <script>
         lucide.createIcons();
@@ -250,5 +275,6 @@
     </script>
 </body>
 </html>
+
 
 
