--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
    <footer class="bg-white py-24 border-t border-stone-100">
     <div class="max-w-7xl mx-auto px-10 flex flex-col items-center space-y-12">
         
-        <img src="img/logo.JPG" class="h-10 opacity-60 grayscale hover:grayscale-0 transition-all duration-700">
+        <img src="logo.JPG" class="h-10 opacity-60 grayscale hover:grayscale-0 transition-all duration-700">
 
         <div class="flex items-center gap-10">
             <a href="https://facebook.com" target="_blank" class="text-stone-400 hover:text-gold transition-all duration-300 transform hover:-translate-y-1">
@@ -275,6 +275,7 @@
     </script>
 </body>
 </html>
+
 
 
 
